// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserProfile /> matches logged in snapshot 1`] = `
<ButtonFlex
  onClick={[Function]}
>
  <styled.img
    alt="Google"
    src="/google.png"
  />
  Login
</ButtonFlex>
`;

exports[`<UserProfile /> matches logged out snapshot 1`] = `
<ButtonFlex
  onClick={[Function]}
>
  <styled.img
    alt="user"
    src="hhtps"
  />
  Logout
</ButtonFlex>
`;
